# Dual-Clocking-Qubits

./: AWG base band arrays  AWG baseband (IQ arrays)  Build IR with two tone + feed forward  Calibration Sweep  DCQ_FastTrack_Addendum.md  IR  IR pulse  LICENSE  Makefile  PHANTOMRAVEN_CI_README.md  Qiskit pulse export  README.md  REPO_SUGGESTIONS.md  ROADMAP-DCQ-500.md  build schedule  dual-clocking_update_2025-10-29 (1).md  export to Qiskit  main.py  minimal usage  noxfile.py  per channel calibration map  phantomraven-scan.yml  phantomraven.py  pyproject.toml  quantum_link_fidelity.py  quick start repo root  refined  requirements.txt  setup.cfg  write waveforms to disk
dual_clocking/: README_BACKENDS.md  __init__.py  scheduler.py  simulate.py
dual_clocking/backends/: base.py  ion.py  nmr.py  plugins.py  superconducting.py  telecom.py
dual_clocking/calibration/: __init__.py  probe_calibration.py
dual_clocking/config/: ion.yaml  superconducting.yaml
dual_clocking/experiments/: dcdramsey.py
dualdrive/: __init__.py  core.py  three_level.py  two_level.py
examples/: __init__.py  run_dc_ramsey.py  run_dualdrive_three_level.py  run_dualdrive_two_level.py  run_nmr.py  run_nmr_grad.py
examples/dual_drive_probe_optimizer/: __init__.py
scripts/: demo_ion.py  demo_sc.py
src/dual_clocking/: README_BACKENDS.md  __init__.py  scheduler.py  simulate.py
src/dual_clocking/backends/: __init__.py  base.py  ion.py  nmr.py  superconducting.py
src/dual_clocking/config/: ion.yaml  superconducting.yaml
src/dual_clocking/experiments/: dcdramsey.py
src/dual_clocking/tests/: test_scheduler.py
tests/: test_phantomraven.py  test_probe_calibration.py  test_quantum_link_fidelity.py  test_scheduler.py
