[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-clocking"
version = "0.3.1"
description = "Dual-clocking control & simulation scaffolding"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Adam"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["dual_clocking*"]
