[metadata]
name = dual-clocking-qubits
version = 0.1.0
description = Backend-aware dual clocking simulator
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Dual Clocking Team

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
include = dual_clocking*, examples*
